# learn-py-pydanticai

./: .gitignore  README.md  pyproject.toml
learn_py_pydanticai/: main.py
